colcon_ws/log/build_2022-09-10_07-53-04/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target nominal_controller[0m
[ 50%] [32mBuilding CXX object CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In constructor ‘NominalController::NominalController()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:29:32: error: no matching function for call to ‘rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >::Publisher()’
   29 |     : Node("nominal_controller")
      |                                ^
In file included from /opt/ros/foxy/include/rclcpp/topic_statistics/subscription_topic_statistics.hpp:31,
                 from /opt/ros/foxy/include/rclcpp/subscription.hpp:50,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:5:
/opt/ros/foxy/include/rclcpp/publisher.hpp:73:3: note: candidate: ‘rclcpp::Publisher<MessageT, AllocatorT>::Publisher(rclcpp::node_interfaces::NodeBaseInterface*, const string&, const rclcpp::QoS&, const rclcpp::PublisherOptionsWithAllocator<AllocatorT>&) [with MessageT = dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >; AllocatorT = std::allocator<void>; std::string = std::__cxx11::basic_string<char>]’
   73 |   Publisher(
      |   ^~~~~~~~~
/opt/ros/foxy/include/rclcpp/publisher.hpp:73:3: note:   candidate expects 4 arguments, 0 provided
/opt/ros/foxy/include/rclcpp/publisher.hpp:51:7: note: candidate: ‘rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >::Publisher(const rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >&)’
   51 | class Publisher : public PublisherBase
      |       ^~~~~~~~~
/opt/ros/foxy/include/rclcpp/publisher.hpp:51:7: note:   candidate expects 1 argument, 0 provided
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:32:93: error: no match for ‘operator=’ (operand types are ‘rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’ and ‘std::shared_ptr<rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > > >’)
   32 |     traj_pub_ = this->create_publisher<dasc_msgs::msg::QuadTrajectory>("/committed_traj", 10);
      |                                                                                             ^
In file included from /opt/ros/foxy/include/rclcpp/topic_statistics/subscription_topic_statistics.hpp:31,
                 from /opt/ros/foxy/include/rclcpp/subscription.hpp:50,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:5:
/opt/ros/foxy/include/rclcpp/publisher.hpp:51:7: note: candidate: ‘rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >& rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >::operator=(const rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >&)’ <deleted>
   51 | class Publisher : public PublisherBase
      |       ^~~~~~~~~
/opt/ros/foxy/include/rclcpp/publisher.hpp:51:7: note:   no known conversion for argument 1 from ‘std::shared_ptr<rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > > >’ to ‘const rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >&’
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::timer_callback()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:89:11: error: ‘transformStamped’ was not declared in this scope
   89 |           transformStamped = tf_buffer_->lookupTransform(
      |           ^~~~~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:142:15: error: base operand of ‘->’ has non-pointer type ‘rclcpp::Publisher<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’
  142 |     traj_pub_ -> publish(msg);
      |               ^~
make[2]: *** [CMakeFiles/nominal_controller.dir/build.make:63: CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/nominal_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
